# novisentinel-core

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  TRADEMARK.md  docker-compose.yml  pytest.ini  requirements.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  setup-repo.sh
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
app/: config.py  dependencies.py  main.py  security.py
app/api/: keys.py  logs.py  proxy.py  scan.py  webhooks.py
app/core/: anonymizer.py  auth.py  rate_limit.py  scan_surfaces.py  scanner.py  session_store.py  webhook.py
app/db/: models.py
app/detectors/: base.py  code_injection.py  custom.py  injection.py  pii.py  secrets.py  toxicity.py  urls.py
app/gateway/: agent.py  errors.py  orchestrator.py  reliability.py  router.py  schemas.py  streaming.py
app/gateway/providers/: anthropic.py  base.py  google.py  http.py  openai.py
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/analytics/: page.tsx
dashboard/app/login/: page.tsx
dashboard/app/logs/: page.tsx
dashboard/app/settings/: page.tsx
dashboard/components/: action-badge.tsx  shell.tsx  sidebar.tsx  stat-card.tsx
dashboard/components/charts/: detector-donut.tsx  risk-bar.tsx  scans-over-time.tsx
dashboard/lib/: api.ts  types.ts
examples/: README.md  aider.md  anthropic_wrapper.py  claude-code.md  cline.md  cursor.md  fastapi_middleware.py  flask_middleware.py  langchain_callback.py  ollama_proxy.md  openai_wrapper.py  python.md  requirements.txt  streamlit_chat.py
extensions/vscode/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
extensions/vscode/src/: api-client.ts  errors.ts  extension.ts  onboarding.ts  output.ts  status-bar.ts  types.ts
extensions/vscode/src/chat/: explanation.ts  participant.ts
extensions/vscode/src/commands/: scan-clipboard.ts  scan-selection.ts
plans/: README.md
plans/oss-section-doc/: 01-STRATEGY.md  02-ROADMAP.md  03-DISTRIBUTION.md  04-OSS_101.md  README.md
plans/process-plans/: 01-LAUNCH_PREP.md  02-PYTHON_SDK.md  03-DASHBOARD.md  04-VSCODE_EXTENSION.md  05-EXAMPLES.md  06-BROWSER_EXTENSION.md  README.md
scripts/: purge_sessions.py  validate_commit_msg.py
sdk/python/: README.md  pyproject.toml
sdk/python/novisentinel/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: conftest.py  test_async_client.py  test_client.py  test_models.py
tests/: test_anonymizer.py  test_api.py  test_auth.py  test_injection.py  test_keys_api.py  test_logs_api.py  test_proxy.py  test_rate_limit.py  test_scan_surfaces.py  test_scanner.py  test_schemas.py  test_secrets.py  test_security.py  test_session_store.py  test_toxicity.py  test_webhooks.py
