[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novisentinel"
version = "0.1.0"
description = "Python SDK for the NoviSentinel AI Safety & PII Firewall"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://novisentinel.com"
Repository = "https://github.com/009-KumarJi/novi-sentinel"
