[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novisentinel"
version = "0.1.0"
description = "Python SDK for the NoviSentinel AI Safety & PII Firewall"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
keywords = ["llm", "ai-safety", "pii", "prompt-injection", "guardrails"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://novisentinel.com"
Repository = "https://github.com/009-KumarJi/novi-sentinel"
Issues = "https://github.com/009-KumarJi/novi-sentinel/issues"
Changelog = "https://github.com/009-KumarJi/novi-sentinel/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
