[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novisentinel"
version = "1.0.0.post1"
description = "Python SDK for the NoviSentinel AI Safety & PII Firewall"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
keywords = ["llm", "ai-safety", "pii", "prompt-injection", "guardrails"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
]

[project.urls]
Homepage = "https://novisentinel.com"
Repository = "https://github.com/009-KumarJi/novisentinel-core"
Issues = "https://github.com/009-KumarJi/novisentinel-core/issues"
Changelog = "https://github.com/009-KumarJi/novisentinel-core/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
